# time-double-ledger-SIM-10-zones

./: .gitignore  CHANGELOG.md  Makefile  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  security.yml
api/: openapi.yaml
ci/: docker-compose.test.yml
db/migrations/: 0001_init.sql  0002_ops_controls_and_spool.sql
docs/: implementation-notes.md  preflight.md  roadmap.md  security-scanning.md  threat-model.md  version-manifest.md
go/: Dockerfile  go.mod  go.sum
go/cmd/sim-go/: main.go
go/internal/app/: app.go  config.go  otel.go
go/internal/ledger/: idempotency_test.go  invariants_test.go  ledger.go  ops.go
go/internal/messaging/: fraud_consumer.go  outbox.go  streams.go
go/internal/util/: hash.go  hash_test.go  query.go  version.go
go/internal/web/: api.go  middleware.go  version.go
infra/: .env.example  docker-compose.yml  otel-collector.yaml  prometheus.yml
rust/sim/: Cargo.toml  Dockerfile
rust/sim/src/: error.rs  lib.rs  main.rs  middleware.rs  state.rs  util.rs
rust/sim/src/handlers/: admin.rs  audit.rs  balances.rs  controls.rs  incidents.rs  mod.rs  spool.rs  transactions.rs  transfers.rs  zones.rs
rust/sim/src/messaging/: fraud.rs  mod.rs  outbox.rs  streams.rs
scripts/: bootstrap-lockfiles.sh
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css  zones.ts
web/src/components/: Modal.tsx  Toast.tsx  ZoneMap.tsx
web/src/lib/: api.ts  risk.ts  storage.ts  time.ts
