[package]
name = "time-ledger-sim-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
time = { version = "0.3.44", features = ["serde", "formatting"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "fmt"] }
async-nats = "0.46.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"
prometheus = "0.14.0"
lazy_static = "1.4"
sha2 = "0.10"
hex = "0.4"
