[package]
name = "time-ledger-sim-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-time-0_3"] }
deadpool-postgres = "0.14"
time = { version = "0.3.47", features = ["serde", "formatting"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }
async-nats = "0.46.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.1"
prometheus = "0.14.0"
lazy_static = "1.5"
sha2 = "0.10"
hex = "0.4"
